# django-react-chat

./: pyproject.toml
djangochat/: .env-example  manage.py
djangochat/account/migrations/: 0001_initial.py
djangochat/djangochat/: settings.py  urls.py
djangochat/server/: models.py  schema.py  serializer.py  validators.py  views.py
djangochat/server/migrations/: 0001_initial.py  0002_category_icon_alter_server_description.py
reactchat/: package.json
reactchat/src/: App.tsx
reactchat/src/pages/: Home.tsx
